Treat already existing saved pages as success.

In some cases, we ran into a failure mode where we saved off a copy of
a page, but then failed.  When we retried, we were getting a result of
ALREADY_EXISTS for the page, but we treated it as an error, which
meant we could never succeed for that page.  We now treat ALREADY_EXISTS
as a success case.  Added a new unit test to check the new code.

BUG=704726

Review-Url: https://codereview.chromium.org/2835253002
Cr-Commit-Position: refs/heads/master@{#467025}

Former-commit-id: 85242f08db71684cbba4bcf94cce92ed91d9726f